# eigen-db

./: .dockerignore  .gitignore  .gitmodules  .prototools  Dockerfile  Dockerfile.controller  Dockerfile.eigendb  LICENSE  README.md  bsd_jail_creation  bsd_jail_internal_setup  bsd_jail_setup  bsd_setup  dagger.json  docker-compose-test.yml  docker-compose.yml  go.mod  go.sum  health_check.py  main.go  package-lock.json  package.json  run_tests.sh
.moon/: toolchain.yml
api/: setup.go
auth/: api_key.go  api_key_test.go
benchmarks/: benchmarks.py  requirements.txt
bsd/: bsd_jail_internal_setup  bsd_jail_setup  eigendb
cfg/: config.go  config_test.go  interfaces.go  setup.go
constants/: constants.go
dagger/: pyproject.toml
e2e/: update_config_testsuite.venom.yml  vector_testsuite.venom.yml
eigen/: config.yml
integration_tests/: health_testsuite.venom.yml  middleware_testsuite.venom.yml  (+1 more)
libs/eigen-py/: .gitignore  LICENSE  README.md  moon.yml  pyproject.toml  setup.py
libs/eigen-py/examples/: rag.ipynb  tweet_semantic_search.ipynb
libs/eigen-py/src/eigen-py/: client.py  response.py
libs/eigen-py/src/eigen_client/: client.py  data_types.py  index.py  response.py  supported_models.py  utils.py
libs/eigen-py/src/eigen_py/: data_types.py  index.py  response.py  supported_models.py
libs/hnswgo/: .gitignore  BUILD.bazel  MODULE.bazel  README.md  bazel-bin  bazel-hnswgo  bazel-out  bazel-testlogs  go.mod  hnsw.go  hnsw_wrapper.cpp  hnsw_wrapper.h  moon.yml
libs/hnswgo/.github/workflows/: tests.yml
libs/hnswgo/examples/: getting_started.go
libs/hnswgo/tests/: hnswgo_test.go
(+243 files in other folders)
