[project]
name = "eigen-py"
version = "1.0.0"
authors = [
  { name="Ryan Awad", email="ryanawad@yahoo.com" },
]
description = "EigenDB's Official Python API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Eigen-DB/eigen-py"
Issues = "https://github.com/Eigen-DB/eigen-py/issues"