[project]
name = "eigen-client"
version = "1.0.2"
authors = [
  { name="Ryan Awad", email="ryanawad@yahoo.com" },
]
description = "EigenDB's Official Python API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests==2.29.0",
    "pytest==8.4.1",
    "tiktoken==0.11.0",
    "ollama==0.5.3",
    "openai==1.101.0"
]

[project.urls]
Homepage = "https://github.com/Eigen-DB/eigen-db/tree/main/libs/eigen-py"
Issues = "https://github.com/Eigen-DB/eigen-db/issues"