load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hnswgo",
    cgo = True,
    srcs = ["hnsw.go"],
    importpath = "github.com/Eigen-DB/eigen-db/libs/hnswgo",
    visibility = ["//visibility:public"],
)

go_test(
    name = "hnswgo_test",
    srcs = ["hnswgo_test.go"],
    embed = [":hnswgo"],
)
